--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.App > input {
+  max-width: 350px;
+}
+
+.App > label {
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
